updated workout index view to show workouts logged by username

--- a/app/views/workouts/index.html.erb
+++ b/app/views/workouts/index.html.erb
@@ -29,11 +29,11 @@
 						</div>
 
 						<div class="panel-footer text-center">
-							<!-- <p>workout logged by <%= workout.user.first_name %></p>
-							<% if current_user %>
+							<p>workout logged by <%= workout.user.username %></p>
+							<!-- <% if current_user %>
 							  <%= link_to "favorite",   favorites_path(@workout, type: "favorite"), method: :put %>
 							  <%= link_to "unfavorite", favorites_path(@workout, type: "unfavorite"), method: :put %>
-							<% end %> -->
+							<% end %>  -->
 						</div>
 						</div>
 					</div>
