updated header with coming soon features

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -19,14 +19,14 @@
         <% if current_user %>
         <li><%= link_to "Logout", destroy_user_session_path, :method => :delete %></li>
         <li><%= link_to "Workouts", workouts_path %></li>
-        <li><a href="#">Goals</a></li>
+        <li><a href="#">Goals (coming soon)</a></li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
-            <li><a href="#">Favorite Workouts</a></li>
-            <li><a href="#">Supplements</a></li>
-            <li><a href="#">Friends</a></li>
-            <li><a href="#">Diets</a></li>
+            <li><a href="#">Favorite Workouts (almost ready!)</a></li>
+            <li><a href="#">Supplements (coming soon)</a></li>
+            <li><a href="#">Friends (coming soon)</a></li>
+            <li><a href="#">Diets (coming soon)</a></li>
             <li class="divider"></li>
             <li></li>
           </ul>
